--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
             em um só
             lugar...</span>
         <a href="#">Saiba mais</a>
-        
 </header>
+
+<section>
+    <img src="https://th.bing.com/th/id/OIP.dD000kMfrS8DNDBhlYofTgHaJ4?w=184&h=245&c=7&r=0&o=5&pid=1.7" alt="foto da Beyonce">
+    <div>
+        <h2> Beyoncé Giselle Knowles-Carter, </h2>
+        <p>conhecida também apenas como Beyoncé,
+            é uma cantora, compositora, atriz, modelo, 
+            dançarina, empresária, produtora, diretora
+            e roteirista norte-americana.</p>    
+            <a href="#">Discografia</a>
+        </div>
+    </section>
     
 </body>
 </html>
