imagens e flet box

--- a/index.html
+++ b/index.html
@@ -13,18 +13,33 @@
         <span>Todas as musicas 
             em um só
             lugar...</span>
-        <a href="#">Saiba mais</a>
+            <a href="#" class="botao">Saiba mais</a>
+        <p>
+            <img class= "musica" src="assets/images/churras.jfif" alt="">
+            <img class= "musica" src="assets/images/fiona.jfif" alt="">
+            <img class= "musica" src="assets/images/humgria.jfif" alt="">
+        </p>
+        <p>
+            <img class= "musica" src="assets/images/imagine.jfif" alt="">
+            <img class= "musica" src="assets/images/ludmila.jfif" alt="">
+            <img class= "musica" src="assets/images/marisa.jfif" alt="">
+        </p>
+        <p>
+            <img class= "musica" src="assets/images/mitski.jfif" alt="">
+            <img class= "musica" src="assets/images/valesca.jfif" alt="">
+            <img class= "musica" src="assets/images/u2.jpg" alt="">
+        </p>
 </header>
 
 <section>
-    <img src="https://th.bing.com/th/id/OIP.dD000kMfrS8DNDBhlYofTgHaJ4?w=184&h=245&c=7&r=0&o=5&pid=1.7" alt="foto da Beyonce">
+    <img id="avatar" src="assets/images/BEy.jpg" alt="foto da Beyonce">
     <div>
         <h2> Beyoncé Giselle Knowles-Carter, </h2>
         <p>conhecida também apenas como Beyoncé,
             é uma cantora, compositora, atriz, modelo, 
             dançarina, empresária, produtora, diretora
             e roteirista norte-americana.</p>    
-            <a href="#">Discografia</a>
+            <a href="#" class="botao">Discografia</a>
         </div>
     </section>
     
