fotos novas bey

--- a/index.html
+++ b/index.html
@@ -43,5 +43,33 @@
         </div>
     </section>
     
+<section id="secao-projetos">
+    <ul>
+        <li id="IamSasha">
+            <div class="card-text">
+                <h2>I am sasha fierce
+                </h2>
+                <p>I Am... Sasha Fierce is the third studio album by American singer Beyoncé.</p>
+                <a href="#" class="botao">Escute Agora</a>
+            </div>
+        </li>
+        <li id="Lemonade">
+            <h2>Lemonade</h2>
+            <p>Lemonade is the sixth studio album by American singer Beyoncé. It was released on April 23, 2016, by Parkwood Entertainment and Columbia Records, accompanied by a 65-minute film of the same title.</p>
+            <a href="#" class="botao">Escute Agora</a>
+        </li>
+        <li id="quatro">
+            <h2>4</h2>
+            <p>4 is the fourth studio album by American singer Beyoncé. Following a career hiatus that reignited her creativity, Beyoncé was inspired to create a record with a basis in traditional rhythm and blues</p>
+            <a href="#" class="botao">Escute Agora</a>
+        </li>
+        <li id="Homecoming">   
+            <h2>Homecoming</h2>
+            <p>Homecoming (estilizado como HΘMΣCΘMING) é um documentário de 2019 sobre a cantora norte-americana Beyoncé e sua apresentação no Coachella Valley Music and Arts Festival de 2018. Ele estreou na Netflix em 17 de abril de 2019.</p>
+            <a href="#" class="botao">Escute Agora</a>
+        </li>
+    </ul>
+</section>
+
 </body>
 </html>
