--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             e roteirista norte-americana.</p>    
             <a href="#" class="botao">Discografia</a>
         </div>
-    </section>
+</section>
     
 <section id="secao-projetos">
     <ul>
@@ -78,24 +78,24 @@
         </li>
     </ul>
 </section>
-<section id="secao-planos">
+
+<section id="secao-orcamento">
     <form action="#">
-        <h3>Planos</h3>
-        <label for="qtde">N. de Paginas</label>
+        <h3>Discos de vinil para venda!</h3>
+        <label for="qtde">Quantos discos?</label>
         <input type="number" id="qtde" min="1" value="1">
-        <label for="js"> Precisa de JS?</label>
+        <label for="js">Pronta entrega?</label>
         <input type="checkbox" id="js">
-        <label for="layout">Precisa de layout?</label>
-        <div>
+        <label for="layout">Importado ou Nacional?</label>
+        <div class="input-group">
             <input type="radio" id="layout_sim" name="layout">
-            <label for="">sim preciso</label>
+            <label for="layout_sim">Importado</label>
             <input type="radio" id="layout_nao" name="layout">
-            <label for="">não preciso</label>
+            <label for="layout_nao">Nacional</label>
         </div>
-        <label for="prazo">prazo</label>
+        <label for="prazo">Prazo</label>
         <input type="range" id="prazo" min="1" max="10">
-        <output>0.00</output>
-    
+        <output>R$ 0,00</output>
     </form>
 </section>
 
