--- a/index.html
+++ b/index.html
@@ -6,15 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjetoWeb</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 </head>
 <body>
+
+    <nav>
+        <div id="hamburguer">
+            <div class="linha" id="linha1"></div>
+            <div class="linha" id="linha2"></div>
+            <div class="linha" id="linha3"></div>
+        </div>
+        <ul>
+            <li><a href="#">
+                <i class="fa-solid fa-house fa-beat"></i>
+                Home
+            </a></li>
+            <li><a href="#secao-apresentacao">
+                <i class="fa-solid fa-crown fa-flip"></i>
+                Beyonce
+            </a></li>
+            <li><a href="#secao-projetos">
+                <i class="fa-solid fa-microphone-lines fa-spin fa-spin-reverse"></i>
+                Projetos
+            </a></li>
+            <li><a href="#secao-orcamento">
+                <i class="fa-solid fa-compact-disc fa-shake"></i>
+                Lojinha
+            </a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1> SpotMusic</h1>
         <span>Todas as musicas 
             em um só
             lugar...</span>
-            <a href="#" class="botao">Saiba mais</a>
+            <a href="#secao-apresentacao" class="botao">Saiba mais</a>
         <p>
             <img class= "musica" src="assets/images/churras.jfif" alt="">
             <img class= "musica" src="assets/images/fiona.jfif" alt="">
@@ -32,15 +60,15 @@
         </p>
 </header>
 
-<section>
+<section id="secao-apresentacao">
     <img id="avatar" src="assets/images/BEy.jpg" alt="foto da Beyonce">
     <div>
         <h2> Beyoncé Giselle Knowles-Carter, </h2>
-        <p>conhecida também apenas como Beyoncé,
+        <p>Conhecida também apenas como Beyoncé,
             é uma cantora, compositora, atriz, modelo, 
             dançarina, empresária, produtora, diretora
             e roteirista norte-americana.</p>    
-            <a href="#" class="botao">Discografia</a>
+            <a href="#secao-projetos" class="botao">Discografia</a>
         </div>
 </section>
     
@@ -51,14 +79,14 @@
                 <h2>I am sasha fierce
                 </h2>
                 <p>I Am... Sasha Fierce is the third studio album by American singer Beyoncé.</p>
-                <a href="#" class="botao">Escute Agora</a>
+                <a href="#secao-orcamento" class="botao">Escute Agora</a>
             </div>
         </li>
         <li id="Lemonade">
             <div class="card-lemonade">
                     <h2>Lemonade</h2>
                     <p>Lemonade is the sixth studio album by American singer Beyoncé. It was released on April 23, 2016, by Parkwood Entertainment and Columbia Records, accompanied by a 65-minute film of the same title.</p>
-                    <a href="#" class="botao">Escute Agora</a>
+                    <a href="#secao-orcamento" class="botao">Escute Agora</a>
                 </div>
             </div>    
         </li>
@@ -66,14 +94,14 @@
             <div class="card-text">
                 <h2>4</h2>           
                 <p>4 is the fourth studio album by American singer Beyoncé. Following a career hiatus that reignited her creativity, Beyoncé was inspired to create a record with a basis in traditional rhythm and blues</p>
-                <a href="#" class="botao">Escute Agora</a>
+                <a href="#secao-orcamento" class="botao">Escute Agora</a>
             </div> 
         </li>
         <li id="Homecoming">   
             <div class="card-text">
                <h2>Homecoming</h2>
                 <p>Homecoming (estilizado como HΘMΣCΘMING) é um documentário de 2019 sobre a cantora norte-americana Beyoncé e sua apresentação no Coachella Valley Music and Arts Festival de 2018. Ele estreou na Netflix em 17 de abril de 2019.</p>
-                <a href="#" class="botao">Escute Agora</a>
+                <a href="#secao-orcamento" class="botao">Escute Agora</a>
             </div>  
         </li>
     </ul>
@@ -81,10 +109,14 @@
 
 <section id="secao-orcamento">
     <form action="#">
-        <h3>Discos de vinil para venda!</h3>
+        <h3>
+            <i class="fa-solid fa-dollar-sign fa-bounce"></i>
+            Discos de vinil para venda!
+            <i class="fa-solid fa-dollar-sign fa-bounce"></i>
+        </h3>
         <label for="qtde">Quantos discos?</label>
         <input type="number" id="qtde" min="1" value="1">
-        <label for="js">Pronta entrega?</label>
+        <label for="js">Para presente?</label>
         <input type="checkbox" id="js">
         <label for="layout">Importado ou Nacional?</label>
         <div class="input-group">
@@ -92,13 +124,23 @@
             <label for="layout_sim">Importado</label>
             <input type="radio" id="layout_nao" name="layout">
             <label for="layout_nao">Nacional</label>
+            <input type="radio" id="ambos" name="layout">
+            <label for="ambos"> Importado e Nacional</label>
         </div>
-        <label for="prazo">Prazo</label>
+        <label for="prazo">Prazo de entrega</label>
         <input type="range" id="prazo" min="1" max="10">
-        <output>R$ 0,00</output>
+        <output><i class="fa-solid fa-r fa-bounce"></i>
+                <i class="fa-solid fa-dollar-sign fa-bounce"></i>
+            0,00
+        </output>
+        <a href="#" class="botao">
+            <i class="fa-solid fa-music fa-spin-pulse"></i>
+            Finalizar!
+        </a>
     </form>
 </section>
 
 </body>
 <script src="./assets/js/script.js"></script>
+<script src="./assets/js/menu.js"></script>
 </html>
