--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img class= "musica" src="assets/images/ludmila.jfif" alt="">
                 <img class= "musica" src="assets/images/marisa.jfif" alt="">
             </p>
-            <p>
+            <p id="chato">
                 <img class= "musica" src="assets/images/mitski.jfif" alt="">
                 <img class= "musica" src="assets/images/valesca.jfif" alt="">
                 <img class= "musica" src="assets/images/u2.jpg" alt="">
