--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img class= "musica" src="assets/images/fiona.jfif" alt="">
                 <img class= "musica" src="assets/images/humgria.jfif" alt="">
             </p>
-            <p>
+            <p id = "chato2">
                 <img class= "musica" src="assets/images/imagine.jfif" alt="">
                 <img class= "musica" src="assets/images/ludmila.jfif" alt="">
                 <img class= "musica" src="assets/images/marisa.jfif" alt="">
